@@ -62,6 +62,24 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|security
+operator|.
+name|proto
+operator|.
+name|SecurityProtos
+operator|.
+name|TokenProto
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
 name|yarn
 operator|.
 name|api
@@ -194,6 +212,24 @@ name|api
 operator|.
 name|records
 operator|.
+name|Token
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|api
+operator|.
+name|records
+operator|.
 name|impl
 operator|.
 name|pb
@@ -265,6 +301,28 @@ operator|.
 name|pb
 operator|.
 name|ResourcePBImpl
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|api
+operator|.
+name|records
+operator|.
+name|impl
+operator|.
+name|pb
+operator|.
+name|TokenPBImpl
 import|;
 end_import
 
@@ -444,6 +502,16 @@ name|allocatedContainers
 init|=
 literal|null
 decl_stmt|;
+DECL|field|nmTokens
+specifier|private
+name|List
+argument_list|<
+name|Token
+argument_list|>
+name|nmTokens
+init|=
+literal|null
+decl_stmt|;
 DECL|field|completedContainersStatuses
 specifier|private
 name|List
@@ -567,6 +635,37 @@ decl_stmt|;
 name|builder
 operator|.
 name|addAllAllocatedContainers
+argument_list|(
+name|iterable
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|nmTokens
+operator|!=
+literal|null
+condition|)
+block|{
+name|builder
+operator|.
+name|clearNmTokens
+argument_list|()
+expr_stmt|;
+name|Iterable
+argument_list|<
+name|TokenProto
+argument_list|>
+name|iterable
+init|=
+name|getTokenProtoIterable
+argument_list|(
+name|nmTokens
+argument_list|)
+decl_stmt|;
+name|builder
+operator|.
+name|addAllNmTokens
 argument_list|(
 name|iterable
 argument_list|)
@@ -1141,6 +1240,80 @@ expr_stmt|;
 block|}
 annotation|@
 name|Override
+DECL|method|setNMTokens (List<Token> nmTokens)
+specifier|public
+specifier|synchronized
+name|void
+name|setNMTokens
+parameter_list|(
+name|List
+argument_list|<
+name|Token
+argument_list|>
+name|nmTokens
+parameter_list|)
+block|{
+if|if
+condition|(
+name|nmTokens
+operator|==
+literal|null
+operator|||
+name|nmTokens
+operator|.
+name|isEmpty
+argument_list|()
+condition|)
+block|{
+name|this
+operator|.
+name|nmTokens
+operator|.
+name|clear
+argument_list|()
+expr_stmt|;
+name|builder
+operator|.
+name|clearNmTokens
+argument_list|()
+expr_stmt|;
+return|return;
+block|}
+comment|// Implementing it as an append rather than set for consistency
+name|initLocalNewNMTokenList
+argument_list|()
+expr_stmt|;
+name|this
+operator|.
+name|nmTokens
+operator|.
+name|addAll
+argument_list|(
+name|nmTokens
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Override
+DECL|method|getNMTokens ()
+specifier|public
+specifier|synchronized
+name|List
+argument_list|<
+name|Token
+argument_list|>
+name|getNMTokens
+parameter_list|()
+block|{
+name|initLocalNewNMTokenList
+argument_list|()
+expr_stmt|;
+return|return
+name|nmTokens
+return|;
+block|}
+annotation|@
+name|Override
 DECL|method|getNumClusterNodes ()
 specifier|public
 specifier|synchronized
@@ -1429,6 +1602,71 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+DECL|method|initLocalNewNMTokenList ()
+specifier|private
+specifier|synchronized
+name|void
+name|initLocalNewNMTokenList
+parameter_list|()
+block|{
+if|if
+condition|(
+name|nmTokens
+operator|!=
+literal|null
+condition|)
+block|{
+return|return;
+block|}
+name|AllocateResponseProtoOrBuilder
+name|p
+init|=
+name|viaProto
+condition|?
+name|proto
+else|:
+name|builder
+decl_stmt|;
+name|List
+argument_list|<
+name|TokenProto
+argument_list|>
+name|list
+init|=
+name|p
+operator|.
+name|getNmTokensList
+argument_list|()
+decl_stmt|;
+name|nmTokens
+operator|=
+operator|new
+name|ArrayList
+argument_list|<
+name|Token
+argument_list|>
+argument_list|()
+expr_stmt|;
+for|for
+control|(
+name|TokenProto
+name|t
+range|:
+name|list
+control|)
+block|{
+name|nmTokens
+operator|.
+name|add
+argument_list|(
+name|convertFromProtoFormat
+argument_list|(
+name|t
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 DECL|method|getProtoIterable ( final List<Container> newContainersList)
 specifier|private
 specifier|synchronized
@@ -1524,6 +1762,114 @@ annotation|@
 name|Override
 specifier|public
 specifier|synchronized
+name|void
+name|remove
+parameter_list|()
+block|{
+throw|throw
+operator|new
+name|UnsupportedOperationException
+argument_list|()
+throw|;
+block|}
+block|}
+return|;
+block|}
+block|}
+return|;
+block|}
+DECL|method|getTokenProtoIterable ( final List<Token> nmTokenList)
+specifier|private
+specifier|synchronized
+name|Iterable
+argument_list|<
+name|TokenProto
+argument_list|>
+name|getTokenProtoIterable
+parameter_list|(
+specifier|final
+name|List
+argument_list|<
+name|Token
+argument_list|>
+name|nmTokenList
+parameter_list|)
+block|{
+name|maybeInitBuilder
+argument_list|()
+expr_stmt|;
+return|return
+operator|new
+name|Iterable
+argument_list|<
+name|TokenProto
+argument_list|>
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+specifier|synchronized
+name|Iterator
+argument_list|<
+name|TokenProto
+argument_list|>
+name|iterator
+parameter_list|()
+block|{
+return|return
+operator|new
+name|Iterator
+argument_list|<
+name|TokenProto
+argument_list|>
+argument_list|()
+block|{
+name|Iterator
+argument_list|<
+name|Token
+argument_list|>
+name|iter
+init|=
+name|nmTokenList
+operator|.
+name|iterator
+argument_list|()
+decl_stmt|;
+annotation|@
+name|Override
+specifier|public
+name|boolean
+name|hasNext
+parameter_list|()
+block|{
+return|return
+name|iter
+operator|.
+name|hasNext
+argument_list|()
+return|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|TokenProto
+name|next
+parameter_list|()
+block|{
+return|return
+name|convertToProtoFormat
+argument_list|(
+name|iter
+operator|.
+name|next
+argument_list|()
+argument_list|)
+return|;
+block|}
+annotation|@
+name|Override
+specifier|public
 name|void
 name|remove
 parameter_list|()
@@ -2029,6 +2375,46 @@ operator|)
 operator|.
 name|getProto
 argument_list|()
+return|;
+block|}
+DECL|method|convertToProtoFormat (Token token)
+specifier|private
+specifier|synchronized
+name|TokenProto
+name|convertToProtoFormat
+parameter_list|(
+name|Token
+name|token
+parameter_list|)
+block|{
+return|return
+operator|(
+operator|(
+name|TokenPBImpl
+operator|)
+name|token
+operator|)
+operator|.
+name|getProto
+argument_list|()
+return|;
+block|}
+DECL|method|convertFromProtoFormat (TokenProto proto)
+specifier|private
+specifier|synchronized
+name|Token
+name|convertFromProtoFormat
+parameter_list|(
+name|TokenProto
+name|proto
+parameter_list|)
+block|{
+return|return
+operator|new
+name|TokenPBImpl
+argument_list|(
+name|proto
+argument_list|)
 return|;
 block|}
 block|}
